--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <h1>Bem Vindo</h1>
       <p>Meus trabalhos:</p>
       
-      <a href="url">Projetolop: https://andreiwf.github.io/projetolop/</a>
+      <a href="url">https://andreiwf.github.io/projetolop/</a>
 
     </body>
 </html>
